--- a/cs-utils/src/main/resources/application.yml
+++ b/cs-utils/src/main/resources/application.yml
@@ -16,6 +16,6 @@ spring:
     name: cs-utils
 logging:
   file:
-    path: ../login/cs-utils.log
+    path: /login/cs-utils.log
   level:
     ROOT: info
