--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,35 @@
         <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <env>dev</env>
+                <!--<dataSource.url><![CDATA[jdbc:mysql://192.168.123.1:3306/zt17?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull]]></dataSource.url>-->
+                <dataSource.url><![CDATA[jdbc:mysql://127.0.0.1:3306/toothDocter2?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull]]></dataSource.url>
+                <dataSource.username>root</dataSource.username>
+                <dataSource.password>123456</dataSource.password>
+                <dataSource.driverClass>com.mysql.jdbc.Driver</dataSource.driverClass>
+                <dbcp2.initialSize>10</dbcp2.initialSize>
+                <dbcp2.minIdle>10</dbcp2.minIdle>
+                <dbcp2.maxIdle>30</dbcp2.maxIdle>
+                <dbcp2.maxWaitMillis>60000</dbcp2.maxWaitMillis>
+                <!--<redis.host>192.168.123.1</redis.host>-->
+                <redis.host>127.0.0.1</redis.host>
+                <redis.port>6379</redis.port>
+                <redis.password>123456</redis.password>
+                <redis.database>1</redis.database>
+                <redis.timeout>60000</redis.timeout>
+                <eureka.ipaddr>127.0.0.1</eureka.ipaddr>
+                <eureka.defaultZone>http://127.0.0.1:8888/eureka/</eureka.defaultZone>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
