--- a/cs-auth/pom.xml
+++ b/cs-auth/pom.xml
@@ -80,6 +80,7 @@
             <groupId>jjk</groupId>
             <artifactId>cs-utils</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
