--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <java.version>1.8</java.version>
         <mybatis-plus.version>3.3.0</mybatis-plus.version>
         <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
+        <jsonsmart.version>2.2.1</jsonsmart.version>
     </properties>
 
     <profiles>
@@ -35,8 +36,7 @@
             <id>dev</id>
             <properties>
                 <env>dev</env>
-                <!--<dataSource.url><![CDATA[jdbc:mysql://192.168.123.1:3306/zt17?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull]]></dataSource.url>-->
-                <dataSource.url>jdbc:mysql://localhost:3306/toothdocter2?useUnicode=true&amp;characterEncoding=utf-8&amp;useSSL=true&amp;serverTimezone=UTC</dataSource.url>
+                <dataSource.url>jdbc:mysql://localhost:3306/cloudStudy?useUnicode=true&amp;characterEncoding=utf-8&amp;useSSL=true&amp;serverTimezone=UTC</dataSource.url>
                 <dataSource.username>root</dataSource.username>
                 <dataSource.password>123456</dataSource.password>
                 <dataSource.driverClass>com.mysql.jdbc.Driver</dataSource.driverClass>
@@ -44,7 +44,6 @@
                 <dbcp2.minIdle>10</dbcp2.minIdle>
                 <dbcp2.maxIdle>30</dbcp2.maxIdle>
                 <dbcp2.maxWaitMillis>60000</dbcp2.maxWaitMillis>
-                <!--<redis.host>192.168.123.1</redis.host>-->
                 <redis.host>127.0.0.1</redis.host>
                 <redis.port>6379</redis.port>
                 <redis.password>123456</redis.password>
