重大版本更新，修改了orm底层框架，及其对应代码

--- a/cs-auth/pom.xml
+++ b/cs-auth/pom.xml
@@ -5,7 +5,6 @@
 
     <groupId>jjk</groupId>
     <artifactId>cs-auth</artifactId>
-
     <name>cs-auth</name>
     <description>安全验证</description>
 
@@ -20,19 +19,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis-plus.version}</version>
         </dependency>
 
         <dependency>
