--- a/cs-utils/pom.xml
+++ b/cs-utils/pom.xml
@@ -74,9 +74,12 @@
             <version>${jsonsmart.version}</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+            <version>${mybatis-plus.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
-
-
-
-
 </project>
