--- a/cs-gateway/src/main/resources/application.yml
+++ b/cs-gateway/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
     context-path: /
 logging:
   file:
-    path: /login/cs-gateway.log
+    path: /log/cs-gateway.log
   level:
     ROOT: info
 spring:
