--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,16 @@
         <module>cs-server</module>
         <module>cs-gateway</module>
         <module>cs-auth</module>
+        <module>cs-car</module>
         <module>cs-utils</module>
+        <module>cs-public-component</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <mybatis-plus.version>3.3.0</mybatis-plus.version>
+        <mybatis-plus.version>3.3.2</mybatis-plus.version>
         <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
         <jsonsmart.version>2.2.1</jsonsmart.version>
     </properties>
