--- a/cs-utils/pom.xml
+++ b/cs-utils/pom.xml
@@ -81,5 +81,11 @@
             <version>${mybatis-plus.version}</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 </project>
